--- a/views/eventList.hbs
+++ b/views/eventList.hbs
@@ -18,7 +18,17 @@
 
 <div class="upcoming-events-container">
     {{#each events}}
-        {{> eventBox this}}
+        {{#if (eq status "planning")}}
+            {{> eventBox this}}
+        {{else}}
+            {{#if (eq status "in progress")}}
+                {{> eventBox this}}
+            {{else}}
+                {{#if (eq status "postponed")}}
+                    {{> eventBox this}}
+                {{/if}}
+            {{/if}}
+        {{/if}}
     {{else}}
         <p class="no-events-message">No events found</p>
     {{/each}}
