--- a/public/common/eventDetails.css
+++ b/public/common/eventDetails.css
@@ -46,5 +46,10 @@
 }
 
 #attendance-check-button {
-    width: 30%;
+    width: fit-content;
+}
+
+.attendance-button-wrap {
+    display: flex;
+    justify-content: flex-end;
 }
