fix: event details team members styling

--- a/views/eventDetails.hbs
+++ b/views/eventDetails.hbs
@@ -131,34 +131,35 @@
         
 
     <div class="team-members">
-        <h3 class="header">Team Members</h3>
-        <form role="search" class="search-bar" onsubmit="return false;">
-        <button type="submit"><i class="lni lni-search-1"></i></button>
-            <input type="search" name="q" id="searchInput" placeholder="Search..." autocomplete="off">
-        </form>
-
-        <div class="members-box">
-            {{!-- <ul id="memberList"></ul>
-        <p id="emptyMessage" style="display: none;">No matching team members found.</p> --}}
-        {{#if teamMembers.length}}
-            {{#each teamMembers}}
-                {{> teamMemberMini2 this}}
-            {{/each}}
-        {{else}}
-            <p>Currently no members in this event.</p>
-        {{/if}}
+        <div class="grid-container">
+            <h3 class="secondary-header">Team Members</h3>
+            <div class="grid-controls">
+                <form role="search" class="search-bar" onsubmit="return false;">
+                <button type="submit"><i class="lni lni-search-1"></i></button>
+                    <input type="search" name="q" id="searchInput" placeholder="Search..." autocomplete="off">
+                </form>
+                {{#if showButtons}}
+                    <button class="fg-button button" id="attendance-check-button">
+                        <a class="fg-button-wrapper button-wrapper" href="/eventAttendance?id={{event._id}}">
+                            <i class="lni lni-user-multiple-4"></i>
+                            <p>Check attendance</p>
+                        </a>
+                    </button>
+                {{/if}}
+            </div>
+            <div class="team-mini-grid">
+                {{!-- <ul id="memberList"></ul>
+            <p id="emptyMessage" style="display: none;">No matching team members found.</p> --}}
+            {{#if teamMembers.length}}
+                {{#each teamMembers}}
+                    {{> teamMemberMini this}}
+                {{/each}}
+            {{else}}
+                <p>Currently no members in this event.</p>
+            {{/if}}
+            </div>
         </div>
 
-    {{#if showButtons}}
-        <div class="attendance-button-wrap">
-            <button class="fg-button button" id="attendance-check-button">
-                <a class="fg-button-wrapper button-wrapper" href="/eventAttendance?id={{event._id}}">
-                    <i class="lni lni-user-multiple-4"></i>
-                    <p>Check attendance</p>
-                </a>
-            </button>
-        </div>
-    {{/if}}
 
     <script>
     const teamId = '{{team._id}}'; //gets the teamid in eventDetailsController
