--- a/public/common/eventDetails.css
+++ b/public/common/eventDetails.css
@@ -1,22 +1,19 @@
-.members-box {
+.grid-controls {
+    display: flex;
+    gap: var(--small-gap);
+}
+
+.team-member-mini-card i#teamMiniAddButton {
+    display: none;
+}
+
+.team-member-mini-card:hover {
     background-color: var(--primary-bg);
-    color: var(--secondary-fg);
-    padding: var(--container-padding);
-    border-radius: var(--container-radius);
-    display: grid;
-    grid-auto-flow: row;
 }
 
 .event-controls {
     display: flex;
     gap: var(--small-gap);
-}
-
-.team-members {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    gap: var(--medium-gap);
 }
 
 .event-details {
