--- a/public/common/global.css
+++ b/public/common/global.css
@@ -602,13 +602,12 @@ a {
 .search-bar {
     display: flex;
     align-items: center;
-    width: 40%;
     background-color: var(--primary-bg);
     border-radius: var(--container-radius);
     border-style: solid;
     border-width: 0.1rem;
     border-color: var(--border-light);
-    padding: 0.4rem 1rem;
+    padding: 0.5rem 1rem;
     gap: var(--small-gap);
 }
 
@@ -680,6 +679,23 @@ a {
     opacity: 0;
     transform: scale(0.95);
     pointer-events: none;
+}
+
+.grid-container {
+    display: flex;
+    flex-direction: column;
+    border: 1px solid var(--border-dark);
+    border-radius: var(--card-radius);
+    padding: var(--card-padding);
+    gap: var(--small-gap);
+}
+
+.team-mini-grid {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: var(--small-gap);
+    overflow-y: scroll;
 }
 
 #status[data-status="planning"] {
@@ -812,18 +828,6 @@ a {
         flex-direction: column;
         align-items: flex-start;
     }
-}
-
-.members-box {
-    background-color: var(--primary-bg);
-    color: var(--secondary-fg);
-    padding: var(--container-padding);
-    border-radius: var(--container-radius);
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    gap: var(--small-gap);
-    overflow-y: scroll;
 }
 
 .attendance-box {
