refactor: frontend scripts imported as modules

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,7 +10,7 @@
         <link rel="stylesheet" href="/common/{{stylesheet}}.css">
     {{/if}}
     {{#if script}}
-        <script src="/common/javascript/{{script}}.js"></script>
+        <script src="/common/javascript/{{script}}.js" type="module"></script>
     {{/if}}
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
