--- a/public/common/global.css
+++ b/public/common/global.css
@@ -565,8 +565,106 @@ a {
     background-color: var(--error-dark);
 }
 
+.dropdown {
+    position: relative;
+    background-color: var(--secondary-bg);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-sizing: border-box;
+    padding: var(--button-padding);
+    border: none;
+    border-radius: var(--input-field-radius);
+    font-family: var(--main-font);
+    font-size: 0.8rem;
+    gap: var(--small-gap);
+    user-select: none;
+    cursor: pointer;
+    transition: background-color 0.15s;
+}
+
+.dropdown-open {
+    background-color: var(--card-bg);
+}
+
+.dropdown:hover {
+    background-color: var(--card-bg);
+}
+
+.dropdown p {
+    margin: 0;
+}
+
+.dropdown i {
+    font-size: 1.2rem;
+}
+
+.dropdown-chevron {
+    transition: transform 0.15s ease-out;
+}
+
+.dropdown-open .dropdown-chevron {
+    transform: scaleY(-100%);
+}
+
+.dropdown-content {
+    top: 100%;
+    left: 0%;
+    width: fit-content;
+    justify-self: flex-start;
+    align-self: flex-start;
+    position: absolute;
+    background-color: var(--card-bg);
+    box-shadow: var(--card-shadow);
+    border-radius: var(--input-field-radius);
+    padding: var(--input-field-radius);
+    pointer-events: none;
+    opacity: 0;
+    transition: opacity 0.15s, top 0.15s;
+}
+
+.dropdown-open .dropdown-content {
+    opacity: 1;
+    pointer-events: all;
+    user-select: all;
+    top: calc(100% + var(--small-gap));
+}
+
+.dropdown-open .dropdown-item {
+    top: 0;
+}
+
+.dropdown-item {
+    text-wrap: nowrap;
+    border: none;
+    background-color: transparent;
+    font-family: var(--main-font);
+    color: var(--primary-fg);
+    padding: var(--button-padding);
+    position: relative;
+    top: -1rem;
+    display: flex;
+    align-items: center;
+    gap: var(--small-gap);
+    border-radius: var(--input-field-radius);
+    transition: background-color 0.15s, top 0.25s;
+}
+
+.dropdown-content:nth-child(1) {
+    transition-delay: 0s;
+}
+
+.dropdown-content:nth-child(2) {
+    transition-delay: 0.5s;
+}
+
+.dropdown-item:hover {
+    background-color: var(--secondary-bg);
+}
+
 .top-page-bar {
     display: flex;
+    position: sticky;
     align-items: stretch;
     gap: var(--small-gap);
 }
@@ -785,7 +883,7 @@ a {
 
 @media (pointer: coarse) {
     * {
-        --button-padding: 1rem 1.5rem;
+        --button-padding: 0.75rem 1.25rem;
     }
 }
 
