--- a/views/teamList.hbs
+++ b/views/teamList.hbs
@@ -16,7 +16,7 @@
             <p>Add</p>
             <i class="lni lni-chevron-down dropdown-chevron"></i>
             <div class="dropdown-content">
-                <a href="/create/user" class="dropdown-item">
+                <a href="/create/member" class="dropdown-item">
                     <i class="lni lni-user-4"></i>
                     Team member
                 </a>
