--- a/views/eventCreate.hbs
+++ b/views/eventCreate.hbs
@@ -1,5 +1,5 @@
 <div class="create-events-wizard card">
-    <form class="create-member-form" action="/create/createMember" method="post">
+    <form class="create-events-form" action="/create/createEvent" method="post">
         <div class="form-page-container">
             <div class="form-page">
                 <h1 class="secondary-header">Event details</h1>
