feat: create members modal to confirm cancellation

--- a/views/memberCreate.hbs
+++ b/views/memberCreate.hbs
@@ -35,10 +35,10 @@
                     <p>Cancel</p>
                 </div>
             </button>
-            <button type="submit" class="fg-button button" id="form-next-button">
+            <button type="submit" class="fg-button button" id="form-submit-button">
                 <div class="button-wrapper">
                     <i class="lni lni-plus"></i>
-                    <p>Add team member</p>
+                    <p>Add</p>
                 </div>
             </button>
         </div>
