--- a/public/common/global.css
+++ b/public/common/global.css
@@ -919,6 +919,12 @@ a {
     }
 }
 
+@media screen and (max-width: 800px) {
+    .form-row {
+        flex-direction: column;
+    }
+}
+
 @media (pointer: coarse) {
     * {
         --button-padding: 0.75rem 1.25rem;
