--- a/views/eventCreate.hbs
+++ b/views/eventCreate.hbs
@@ -1,5 +1,5 @@
-<div class="create-events-wizard card">
-    <form class="create-events-form" action="/create/createEvent" method="post">
+<DIV class="form-wizard card">
+    <form class="form" action="/create/createEvent" method="post">
         <div class="form-page-container">
             <div class="form-page">
                 <h1 class="secondary-header">Event details</h1>
@@ -120,4 +120,4 @@
         <input type="hidden" id="added-suppliers-input" name="addedSuppliers">
 
     </form>
-</div>
+</DIV>
