fix: no gap between cards in past events list

--- a/views/pastEvents.hbs
+++ b/views/pastEvents.hbs
@@ -7,7 +7,7 @@
     </form>
 </div>
 
-<div class="upcoming-events-container">
+<div class="card-list">
     {{#each events}}
         {{#if (eq status "completed")}}
             {{> eventBox this}}
