fix: change url for profile in sidebar

--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -130,7 +130,7 @@
                     </li>
                 </a>
             {{/if}}
-            <a class="nav-link-wrapper" href="/profile">
+            <a class="nav-link-wrapper" href="/profile/{{user.firstName}}_{{user.lastName}}">
                 <li class="nav-link accounts-page-link">
                     <div class="link-name">
                         <div class="profile-picture image">
