feat: team member cards redirect to profile page

--- a/views/partials/teamMember.hbs
+++ b/views/partials/teamMember.hbs
@@ -1,4 +1,4 @@
-<div class="team-member-card card"
+<a href="/profile/{{_id}}" class="team-member-card card"
     data-email="{{email}}"
     data-bio="{{bio}}"
     data-role="{{role}}"
@@ -10,4 +10,4 @@
         <span id="role">{{role}}</span>
         <span id="contact-no">{{formatPhone _id}}</span>
     </div>
-</div>
+</a>
