--- a/public/common/profile.css
+++ b/public/common/profile.css
@@ -8,7 +8,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    padding: var(--container-padding);
+    padding: 3rem 2.5rem;
 }
 
 .card-description-item a {
