--- a/views/eventDetails.hbs
+++ b/views/eventDetails.hbs
@@ -158,6 +158,35 @@
             </div>
         </div>
 
+         <div class="grid-container">
+            <h3 class="secondary-header">Suppliers</h3>
+            <div class="grid-controls">
+                <form role="search" class="search-bar" onsubmit="return false;">
+                <button type="submit"><i class="lni lni-search-1"></i></button>
+                    <input type="search" name="q" id="searchInput" placeholder="Search..." autocomplete="off">
+                </form>
+                {{#if showButtons}}
+                    <button class="fg-button button" id="attendance-check-button">
+                        <a class="fg-button-wrapper button-wrapper" href="/eventAttendance?id={{event._id}}">
+                            <i class="lni lni-user-multiple-4"></i>
+                            <p>Check attendance</p>
+                        </a>
+                    </button>
+                {{/if}}
+            </div>
+            <div class="team-mini-grid">
+                {{!-- <ul id="memberList"></ul>
+            <p id="emptyMessage" style="display: none;">No matching team members found.</p> --}}
+            {{#if supplierList.length}}
+                {{#each supplierList}}
+                    {{> supplierMini this}}
+                {{/each}}
+            {{else}}
+                <p>Currently no suppliers in this event.</p>
+            {{/if}}
+            </div>
+        </div>
+
 
     <script>
     const teamId = '{{team._id}}'; //gets the teamid in eventDetailsController
