feat: add two fields for contact person name

--- a/views/eventCreate.hbs
+++ b/views/eventCreate.hbs
@@ -38,9 +38,15 @@
                 <h1 class="secondary-header">Contact person</h1>
                 <div class="form-row">
                     <div class="text-field-container">
-                        <label class="field-label" for="contact-name">Name</label>
-                        <input type="text" id="contact-name" class="text-field" name="contact-name" required>
+                        <label class="field-label" for="contact-name">First name</label>
+                        <input type="text" id="contact-name" class="text-field" name="contact-first-name" required>
                     </div>
+                    <div class="text-field-container">
+                        <label class="field-label" for="contact-name">Last name</label>
+                        <input type="text" id="contact-name" class="text-field" name="contact-last-name" required>
+                    </div>
+                </div>
+                <div class="form-row">
                     <div class="text-field-container">
                         <label class="field-label" for="phone-number">Phone number</label>
                         <input type="text" id="phone-number" class="text-field" name="phone-number" required>
