--- a/views/eventCreate.hbs
+++ b/views/eventCreate.hbs
@@ -8,9 +8,15 @@
                         <label class="field-label" for="event-name">Event name</label>
                         <input type="text" id="event-name" class="text-field" name="event-name" required>
                     </div>
+                </div>
+                <div class="form-row">
                     <div class="text-field-container">
-                        <label class="field-label" for="client-name">Client name</label>
-                        <input type="text" id="client-name" class="text-field" name="client-name" required>
+                        <label class="field-label" for="client-first-name">Client first name</label>
+                        <input type="text" id="client-first-name" class="text-field" name="client-first-name" required>
+                    </div>
+                    <div class="text-field-container">
+                        <label class="field-label" for="client-last-name">Client last name</label>
+                        <input type="text" id="client-last-name" class="text-field" name="client-last-name" required>
                     </div>
                 </div>
                 <div class="form-row">
@@ -38,12 +44,12 @@
                 <h1 class="secondary-header">Contact person</h1>
                 <div class="form-row">
                     <div class="text-field-container">
-                        <label class="field-label" for="contact-name">First name</label>
-                        <input type="text" id="contact-name" class="text-field" name="contact-first-name" required>
+                        <label class="field-label" for="contact-first-name">First name</label>
+                        <input type="text" id="contact-first-name" class="text-field" name="contact-first-name" required>
                     </div>
                     <div class="text-field-container">
-                        <label class="field-label" for="contact-name">Last name</label>
-                        <input type="text" id="contact-name" class="text-field" name="contact-last-name" required>
+                        <label class="field-label" for="contact-last-name">Last name</label>
+                        <input type="text" id="contact-last-name" class="text-field" name="contact-last-name" required>
                     </div>
                 </div>
                 <div class="form-row">
