--- a/views/eventCreate.hbs
+++ b/views/eventCreate.hbs
@@ -1,7 +1,7 @@
 <DIV class="form-wizard card">
     <form class="form" action="/create/createEvent" method="post">
         <div class="form-page-container">
-            <div class="form-page">
+            <div class="form-page" id="detailsPage">
                 <h1 class="secondary-header">Event details</h1>
                 <div class="form-row">
                     <div class="text-field-container">
@@ -103,25 +103,19 @@
             </div>
         </div>
         <div class="form-controls">
-            <button type="button" class="bg-button button" id="form-cancel-button">
-                <div class="button-wrapper">
-                    <i class="lni lni-xmark"></i>
-                    <p>Cancel</p>
-                </div>
-            </button>
-            <button type="button" class="bg-button button" id="form-back-button">
+            <button type="button" class="disabled-button bg-button button" id="form-back-button" disabled>
                 <div class="button-wrapper">
                     <i class="lni lni-arrow-left"></i>
                     <p>Back</p>
                 </div>
             </button>
-            <button type="button" class="fg-button button" id="form-next-button">
+            <button type="button" class="disabled-button fg-button button" id="form-next-button" disabled>
                 <div class="button-wrapper">
                     <i class="lni lni-arrow-right"></i>
                     <p>Next</p>
                 </div>
             </button>
-            <button type="submit" class="fg-button button" id="form-submit-button" disabled>
+            <button type="submit" class="form-hidden-button fg-button button" id="form-submit-button" disabled>
                 <div class="button-wrapper">
                     <i class="lni lni-check"></i>
                     <p>Create event</p>
