--- a/public/common/eventCreate.css
+++ b/public/common/eventCreate.css
@@ -9,9 +9,136 @@
 .create-events-form {
     display: flex;
     flex-direction: column;
-    gap: 1.5rem;
+    gap: var(--big-gap);
+    overflow-x: hidden;
+}
+
+.form-page-container {
+    display: flex;
+    transition: transform 0.5s cubic-bezier(0.16, 1, 0.3, 1);
+    height: auto;
+    min-height: 0;
+}
+
+.form-page {
+    display: flex;
+    flex-direction: column;
+    gap: var(--medium-gap);
+    flex-shrink: 0;
+    width: 100%;
+}
+
+.form-row {
+    display: flex;
+    flex-direction: row;
+    gap: var(--small-gap);
+}
+
+.form-controls {
+    display: flex;
+    gap: var(--small-gap);
+    align-self: flex-end;
+    background: var(--card-bg);
+}
+
+.form-hidden-button {
+    display: none;
+}
+
+.grid-container {
+    display: flex;
+    flex-direction: column;
+    box-shadow: inset 0 0 0 1px var(--border-dark);
+    border-radius: var(--card-radius);
+    padding: var(--card-padding);
+    gap: var(--small-gap);
+}
+
+.team-mini-grid {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: var(--small-gap);
+    overflow-y: scroll;
 }
 
 #team-members-page .grid-container {
     height: 50%;
+}
+
+@media screen and (max-width: 800px) {
+    .form-row {
+        flex-direction: column;
+    }
+
+    .button {
+        padding: 10px 16px;
+        font-size: 14px;
+        border-radius: 6px;
+    }
+
+    .button-wrapper {
+        display: flex;
+        align-items: center;
+        gap: 8px;
+    }
+
+    .button i {
+        font-size: 16px;
+    }
+
+    .secondary-header {
+        font-size: 0.8rem;
+    }
+
+    .team-mini-grid {
+        display: flex;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: var(--small-gap);
+        overflow-y: scroll;
+    }
+
+    #team-members-page .grid-container {
+        height: 40%;
+    }
+
+    .search-bar {
+        padding: 0.3rem;
+    }
+
+    #search-icon i.lni {
+        font-size: 1rem;
+    }
+
+    #memberSearchInput::placeholder {
+        font-size: 0.7rem;
+    }
+
+    .form-page-container {
+        height: 45rem;
+    }
+
+    .form-controls {
+        gap: var(--small-gap);
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+
+    .button {
+        border-radius: 1rem;
+        padding: 0.6rem;
+        font-size: 0.5rem;
+        flex-grow: 1;
+        min-width: 0;
+    }
+
+    .button-wrapper {
+        gap: var(--small-gap);
+        justify-content: center;
+    }
+
+    .button i {
+        font-size: 0.8rem;
+    }
 }
