--- a/views/editEvent.hbs
+++ b/views/editEvent.hbs
@@ -1,34 +1,60 @@
-<DIV class="form-wizard card">
-    <form class="form" action="/create/createEvent" method="post">
+<div class="modal-container modal-container-hidden">
+    <div class="modal modal-hidden">
+        <h2 class="modal-header header">Discard changes?</h2>
+        <p class="modal-description">Changes will not be saved.</p>
+        <div class="modal-controls">
+            <button class="bg-button button" id="cancel-modal-no-button">
+                <div class="button-wrapper">
+                    <i class="lni lni-pencil-1"></i>
+                    <p>Keep editing</p>
+                </div>
+            </button>
+            <button class="destructive-button button" id="cancel-modal-yes-button">
+                <div class="button-wrapper">
+                    <i class="lni lni-trash-3"></i>
+                    <p>Discard</p>
+                </div>
+            </button>
+        </div>
+    </div>
+</div>
+
+<div class="page-title-bar">
+    <button class="back-link" id="page-back-button">
+        <div class="button-wrapper">
+            <i class="lni lni-arrow-left"></i>
+            <p>Back</p>
+        </div>
+    </button>
+    <h2 class="header">Edit event: </h2>
+    <h2 class="header" id="event-name">{{event.eventName}}</h2>
+</div>
+
+<div class="create-events-wizard card">
+    <form class="create-event-form" action="/create/createEvent" method="post">
         <div class="form-page-container">
-            <div class="form-page" id="detailsPage">
+            <div class="form-page">
                 <h1 class="secondary-header">Event details</h1>
                 <div class="form-row">
                     <div class="text-field-container">
                         <label class="field-label" for="event-name">Event name</label>
-                        <input type="text" id="event-name" class="text-field" name="event-name" required>
-                    </div>
-                </div>
-                <div class="form-row">
-                    <div class="text-field-container">
-                        <label class="field-label" for="client-first-name">Client first name</label>
-                        <input type="text" id="client-first-name" class="text-field" name="client-first-name" required>
+                        <input type="text" id="event-name" class="text-field" name="event-name" value="{{event.eventName}}" required>
                     </div>
                     <div class="text-field-container">
-                        <label class="field-label" for="client-last-name">Client last name</label>
-                        <input type="text" id="client-last-name" class="text-field" name="client-last-name" required>
+                        <label class="field-label" for="client-name">Client name</label>
+                        <input type="text" id="client-name" class="text-field" name="client-name" value="{{event.clientName}}" required>
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="text-field-container">
                         <label class="field-label" for="event-description">Description</label>
-                        <textarea id="event-description" class="text-field" name="event-description" rows="6" required></textarea>
+                        <textarea id="event-description" class="text-field" name="event-description" rows="6" required>{{event.description}}</textarea>
                     </div>
                 </div>
                 <div class="form-row">
                     <div class="text-field-container">
                         <label class="field-label" for="location">Location</label>
-                        <input type="text" id="location" class="text-field" name="location" required>
+                        <input type="text" id="location" class="text-field" name="location" value="{{event.location}}" required>
                     </div>
                 </div>
                 <div class="form-row">
@@ -44,18 +70,12 @@
                 <h1 class="secondary-header">Contact person</h1>
                 <div class="form-row">
                     <div class="text-field-container">
-                        <label class="field-label" for="contact-first-name">First name</label>
-                        <input type="text" id="contact-first-name" class="text-field" name="contact-first-name" required>
+                        <label class="field-label" for="contact-name">Name</label>
+                        <input type="text" id="contact-name" class="text-field" name="contact-name" value="{{event.CPFirstName}} {{event.CPLastName}}" required>
                     </div>
-                    <div class="text-field-container">
-                        <label class="field-label" for="contact-last-name">Last name</label>
-                        <input type="text" id="contact-last-name" class="text-field" name="contact-last-name" required>
-                    </div>
-                </div>
-                <div class="form-row">
                     <div class="text-field-container">
                         <label class="field-label" for="phone-number">Phone number</label>
-                        <input type="text" id="phone-number" class="text-field" name="phone-number" required>
+                        <input type="text" id="phone-number" class="text-field" name="phone-number" value="{{event.CPContactNo}}" required>
                     </div>
                 </div>
             </div>
@@ -64,7 +84,7 @@
                 <div class="grid-container">
                     <h1 class="secondary-header">Search</h1>
                     <div role="search" class="search-bar" id="memberSearchForm">
-                        <button type="submit" id="search-icon"><i class="lni lni-search-1"></i></button>
+                        <button type="submit"><i class="lni lni-search-1"></i></button>
                         <input type="search" name="q" id="memberSearchInput" placeholder="Search team members...">
                     </div>
                     <div class="team-mini-grid" id="memberSearchResults">
@@ -85,7 +105,7 @@
                 <div class="grid-container">
                     <h1 class="secondary-header">Search</h1>
                     <div role="search" class="search-bar" id="supplierSearchForm">
-                        <button type="submit" id="search-icon"><i class="lni lni-search-1"></i></button>
+                        <button type="submit"><i class="lni lni-search-1"></i></button>
                         <input type="search" name="q" id="memberSearchInput" placeholder="Search suppliers...">
                     </div>
                     <div class="team-mini-grid" id="supplierSearchResults">
@@ -103,22 +123,28 @@
             </div>
         </div>
         <div class="form-controls">
-            <button type="button" class="disabled-button bg-button button" id="form-back-button" disabled>
+            <button type="button" class="bg-button button" id="form-cancel-button">
+                <div class="button-wrapper">
+                    <i class="lni lni-xmark"></i>
+                    <p>Cancel</p>
+                </div>
+            </button>
+            <button type="button" class="bg-button button" id="form-back-button">
                 <div class="button-wrapper">
                     <i class="lni lni-arrow-left"></i>
                     <p>Back</p>
                 </div>
             </button>
-            <button type="button" class="disabled-button fg-button button" id="form-next-button" disabled>
+            <button type="button" class="fg-button button" id="form-next-button">
                 <div class="button-wrapper">
                     <i class="lni lni-arrow-right"></i>
                     <p>Next</p>
                 </div>
             </button>
-            <button type="submit" class="form-hidden-button fg-button button" id="form-submit-button" disabled>
+            <button type="submit" class="fg-button button" id="form-submit-button" disabled>
                 <div class="button-wrapper">
-                    <i class="lni lni-check"></i>
-                    <p>Create event</p>
+                    <i class="lni lni-pencil-1"></i>
+                    <p>Edit event</p>
                 </div>
             </button>
         </div>
@@ -126,4 +152,4 @@
         <input type="hidden" id="added-suppliers-input" name="addedSuppliers">
 
     </form>
-</DIV>
+</div>
