--- a/views/eventDetails.hbs
+++ b/views/eventDetails.hbs
@@ -53,7 +53,7 @@
         {{#if showButtons}}
         <div class="event-controls">
             <button class="bg-button button" id="details-edit-button">
-                <a class="bg-button-wrapper button-wrapper" href="#">
+                <a class="bg-button-wrapper button-wrapper" href="/editEvent?id={{event._id}}">
                     <i class="lni lni-pencil-1"></i>
                     <p>Edit</p>
                 </a>
