--- a/views/layouts/form.hbs
+++ b/views/layouts/form.hbs
@@ -9,6 +9,7 @@
     {{#if stylesheet}}
         <link rel="stylesheet" href="/common/{{stylesheet}}.css">
     {{/if}}
+        <link rel="stylesheet" href="/common/form.css">
     {{#if script}}
         <script src="/common/javascript/{{script}}.js" type="module"></script>
     {{/if}}
@@ -47,7 +48,6 @@
             <button class="back-link" id="page-back-button">
                 <a class="button-wrapper" href="#">
                     <i class="lni lni-arrow-left"></i>
-                    <p>Back</p>
                 </a>
             </button>
             <h2 class="header">{{title}}</h2>
